--- a/src/app/common/common.component.html
+++ b/src/app/common/common.component.html
@@ -1,2 +1,9 @@
-<navbar></navbar>
-<router-outlet></router-outlet>
+<div class="row full-height m-0">
+    <div class="col-3">
+        <navbar></navbar>
+    </div>
+    <div class="col-9 pl-0">
+        <router-outlet></router-outlet>
+    </div>
+</div>
+
