--- a/src/app/contacts/templates/card.component.html
+++ b/src/app/contacts/templates/card.component.html
@@ -1,1 +1,5 @@
-<div class="card">Card</div>
+<div class="main-block">
+    <div class="main-block__title">Contact card</div>
+    <div class="main-block__border-block rounded">
+    </div>
+</div>
