--- a/src/app/contacts/templates/contacts.component.html
+++ b/src/app/contacts/templates/contacts.component.html
@@ -1,7 +1,16 @@
-<div class="contacts">
-    <h1>Contacts</h1>
-    <div class="contacts__body">
-        <list-menu></list-menu>
+<div class="row full-height m-0">
+    <div class="col-8 p-0">
+        <div class="main-block">
+            <div class="main-block__title">Contacts page</div>
+            <div class="main-block__border-block rounded">
+                <list-menu></list-menu>
+                <div class="list-table mt-4">
+                    <contacts-list></contacts-list>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-4 pr-0">
+        <contact-card></contact-card>
     </div>
 </div>
-<card></card>
