--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -1,1 +1,6 @@
-<div>Groups</div>
+<div class="main-block">
+    <div class="main-block__title">Groups</div>
+    <div class="main-block__border-block rounded">
+        <list-menu></list-menu>
+    </div>
+</div>
