--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
-<div class="menu">
-    <button>Create</button>
-    <button>Edit</button>
-    <button>Delete</button>
-    <button>Select</button>
+<div class="menu text-center">
+    <button type="button" class="btn btn-outline-primary btn-sm">Create</button>
+    <button type="button" class="btn btn-outline-primary btn-sm" disabled>Edit</button>
+    <button type="button" class="btn btn-outline-primary btn-sm" disabled>Delete</button>
+    <button type="button" class="btn btn-outline-primary btn-sm">Select</button>
 </div>
