--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,13 @@
-<nav>
-    <a routerLink="/contacts" routerLinkActive="active">Contacts</a>
-    <a routerLink="/groups" routerLinkActive="active">Groups</a>
-    <a routerLink="/clocks" routerLinkActive="active">Clocks</a>
-</nav>
+<div class="main-block">
+    <div class="main-block__title">Menu</div>
+    <div class="main-block__border-block rounded">
+        <nav>
+            <div class="list-group">
+                <a routerLink="/contacts" routerLinkActive="active" class="list-group-item">Contacts</a>
+                <a routerLink="/groups" routerLinkActive="active" class="list-group-item">Groups</a>
+                <a routerLink="/clocks" routerLinkActive="active" class="list-group-item">Clocks</a>
+            </div>
+        </nav>
+    </div>
+</div>
+
