--- a/src/app/404/404.component.html
+++ b/src/app/404/404.component.html
@@ -1,1 +1,3 @@
-<div>404</div>
+<div class="page-not-found d-flex align-items-center justify-content-center">
+    <h1 class="page-not-found__message">404, Page Not Found</h1>
+</div>
