--- a/src/app/clocks/clocks.component.html
+++ b/src/app/clocks/clocks.component.html
@@ -1,1 +1,5 @@
-<div>Clocks</div>
+<div class="main-block">
+    <div class="main-block__title">Clocks</div>
+    <div class="main-block__border-block rounded">
+    </div>
+</div>
