popup create new

--- a/src/app/contacts/templates/contacts-list.component.html
+++ b/src/app/contacts/templates/contacts-list.component.html
@@ -10,19 +10,13 @@
     </tr>
     </thead>
     <tbody>
-    <tr>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-    </tr>
-    <tr>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-    </tr>
-    <tr>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
+    <tr *ngFor="let item of contactsList">
+        <td>{{ item.name }}</td>
+        <td>{{ item.surname }}</td>
+        <td>{{ item.age }}</td>
+        <td>{{ item.group }}</td>
+        <td>{{ item.distriction }}</td>
+        <td>{{ item.note }}</td>
     </tr>
     </tbody>
 </table>
