--- a/src/app/contacts/templates/adduser.component.html
+++ b/src/app/contacts/templates/adduser.component.html
@@ -47,9 +47,9 @@
                     name="group"
                     ngModel>
                 <option value="">No group</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
+                <option value="quantum1">quantum</option>
+                <option value="quantum2">Two</option>
+                <option value="quantum3">Three</option>
             </select>
         </div>
         <div class="form-group">
