--- a/src/app/popup/popup.component.html
+++ b/src/app/popup/popup.component.html
@@ -1,9 +1,9 @@
-<div class="d-flex justify-content-center align-items-center fixed-top full-height dark-shim"
-     (click)="closePopup($event)">
+<div [ngClass]="visibility?'visible':'hidden'" class="d-flex justify-content-center align-items-center fixed-top full-height dark-shim"
+     (click)="popupClickHandler($event)">
     <div class="popup-blank rounded">
         <div class="popup-title p-3">{{titleName}}</div>
         <div class="p-4">
-            <router-outlet></router-outlet>
+            <div #container></div>
         </div>
     </div>
 </div>
