--- a/src/app/contacts/templates/contacts-list.component.html
+++ b/src/app/contacts/templates/contacts-list.component.html
@@ -10,7 +10,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let item of contactsList"
+    <tr *ngFor="let item of contacts"
         (click)="tableClickHandler(item)"
         [ngClass]="{selected: item.select }">
         <td>{{ item.name }}</td>
