--- a/src/app/popup/popup.component.scss
+++ b/src/app/popup/popup.component.scss
@@ -1,5 +1,6 @@
 .dark-shim{
   background: rgba(0, 0, 0, 0.6);
+  transition: all .2s ease-out;
 }
 .popup-blank{
   background: #fff;
@@ -8,4 +9,14 @@
 .popup-title{
   color: #0275d8;
   border-bottom: 1px solid #c2c2c2;
+}
+
+.hidden{
+  visibility: hidden;
+  background: rgba(0, 0, 0, 0.0);
+}
+
+.visible{
+  visibility: visible;
+  background: rgba(0, 0, 0, 0.6);
 }
