--- a/src/app/contacts/templates/adduser.component.html
+++ b/src/app/contacts/templates/adduser.component.html
@@ -53,11 +53,11 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="destriction" class="form-control-label">Your Destriction</label>
+            <label for="distriction" class="form-control-label">Your Distriction</label>
             <input type="text"
                    class="form-control"
-                   id="destriction"
-                   name="destriction"
+                   id="distriction"
+                   name="distriction"
                    ngModel
                    placeholder="Enter your destriction">
         </div>
